==> zhangl1i/EF-3s-robot_code-change_body/USER/pwm.c <==
#include "pwm.h"

void TIM1_PWM_Init(u16 arr,u16 psc)
{ 
    TIM1_Handler.Instance=TIM1;            //定时器3
    TIM1_Handler.Init.Prescaler=psc;       //定时器分频
    TIM1_Handler.Init.CounterMode=TIM_COUNTERMODE_UP;//向上计数模式
    TIM1_Handler.Init.Period=arr;          //自动重装载值
    TIM1_Handler.Init.ClockDivision=TIM_CLOCKDIVISION_DIV1;

    HAL_TIM_PWM_Init(&TIM1_Handler);       //初始化PWM
    
	//对应 User_PWM_SetPulse
    TIM1_CH1Handler.OCMode=TIM_OCMODE_PWM1; //模式选择PWM1
    TIM1_CH1Handler.Pulse=arr/2;            //设置比较值,此值用来确定占空比，//默认比较值为自动重装载值的一半,即占空比为50%
    TIM1_CH1Handler.OCPolarity=TIM_OCPOLARITY_HIGH; //输出比较极性为低 
	
		TIM1_CH2Handler.OCMode=TIM_OCMODE_PWM1; //模式选择PWM1
    TIM1_CH2Handler.Pulse=arr/2;            //设置比较值,此值用来确定占空比，//默认比较值为自动重装载值的一半,即占空比为50%
    TIM1_CH2Handler.OCPolarity=TIM_OCPOLARITY_HIGH; //输出比较极性为低 
	
		TIM1_CH3Handler.OCMode=TIM_OCMODE_PWM1; //模式选择PWM1
    TIM1_CH3Handler.Pulse=arr/2;            //设置比较值,此值用来确定占空比，//默认比较值为自动重装载值的一半,即占空比为50%
    TIM1_CH3Handler.OCPolarity=TIM_OCPOLARITY_HIGH; //输出比较极性为低 
	
		TIM1_CH4Handler.OCMode=TIM_OCMODE_PWM1; //模式选择PWM1
    TIM1_CH4Handler.Pulse=arr/2;            //设置比较值,此值用来确定占空比，//默认比较值为自动重装载值的一半,即占空比为50%
    TIM1_CH4Handler.OCPolarity=TIM_OCPOLARITY_HIGH; //输出比较极性为低 
	
    HAL_TIM_PWM_ConfigChannel(&TIM1_Handler,&TIM1_CH1Handler,TIM_CHANNEL_1);//配置TIM1通道1
    HAL_TIM_PWM_Start(&TIM1_Handler,TIM_CHANNEL_1);//开启PWM通道1
		HAL_TIM_PWM_ConfigChannel(&TIM1_Handler,&TIM1_CH2Handler,TIM_CHANNEL_2);//配置TIM1通道2
    HAL_TIM_PWM_Start(&TIM1_Handler,TIM_CHANNEL_2);//开启PWM通道2
		HAL_TIM_PWM_ConfigChannel(&TIM1_Handler,&TIM1_CH3Handler,TIM_CHANNEL_3);//配置TIM1通道3
    HAL_TIM_PWM_Start(&TIM1_Handler,TIM_CHANNEL_3);//开启PWM通道3
		HAL_TIM_PWM_ConfigChannel(&TIM1_Handler,&TIM1_CH4Handler,TIM_CHANNEL_4);//配置TIM1通道4
		HAL_TIM_PWM_Start(&TIM1_Handler,TIM_CHANNEL_4);//开启PWM通道4
}

void TIM3_PWM_Init(u16 arr,u16 psc)
{ 
    TIM3_Handler.Instance=TIM3;            //定时器3
    TIM3_Handler.Init.Prescaler=psc;       //定时器分频
    TIM3_Handler.Init.CounterMode=TIM_COUNTERMODE_UP;//向上计数模式
    TIM3_Handler.Init.Period=arr;          //自动重装载值
    TIM3_Handler.Init.ClockDivision=TIM_CLOCKDIVISION_DIV1;
	

    HAL_TIM_PWM_Init(&TIM3_Handler);       //初始化PWM
    
	//对应 User_PWM_SetPulse
		TIM3_CH1Handler.OCMode=TIM_OCMODE_PWM1; //模式选择PWM1
    TIM3_CH1Handler.Pulse=arr/2;            //设置比较值,此值用来确定占空比，//默认比较值为自动重装载值的一半,即占空比为50%
    TIM3_CH1Handler.OCPolarity=TIM_OCPOLARITY_HIGH; //输出比较极性为低 
	
		TIM3_CH2Handler.OCMode=TIM_OCMODE_PWM1; //模式选择PWM1
    TIM3_CH2Handler.Pulse=arr/2;            //设置比较值,此值用来确定占空比，//默认比较值为自动重装载值的一半,即占空比为50%
    TIM3_CH2Handler.OCPolarity=TIM_OCPOLARITY_HIGH; //输出比较极性为低 
	
    TIM3_CH3Handler.OCMode=TIM_OCMODE_PWM1; //模式选择PWM1
    TIM3_CH3Handler.Pulse=arr/2;            //设置比较值,此值用来确定占空比，//默认比较值为自动重装载值的一半,即占空比为50%
    TIM3_CH3Handler.OCPolarity=TIM_OCPOLARITY_HIGH; //输出比较极性为低 
	
		TIM3_CH4Handler.OCMode=TIM_OCMODE_PWM1; //模式选择PWM1
    TIM3_CH4Handler.Pulse=arr/2;            //设置比较值,此值用来确定占空比，//默认比较值为自动重装载值的一半,即占空比为50%
    TIM3_CH4Handler.OCPolarity=TIM_OCPOLARITY_HIGH; //输出比较极性为低 
	//通道配置
    HAL_TIM_PWM_ConfigChannel(&TIM3_Handler,&TIM3_CH1Handler,TIM_CHANNEL_1);//配置TIM3通道4
    HAL_TIM_PWM_Start(&TIM3_Handler,TIM_CHANNEL_1);//开启PWM通道4
	
		HAL_TIM_PWM_ConfigChannel(&TIM3_Handler,&TIM3_CH2Handler,TIM_CHANNEL_2);//配置TIM3通道3
    HAL_TIM_PWM_Start(&TIM3_Handler,TIM_CHANNEL_2);//开启PWM通道4
	
		HAL_TIM_PWM_ConfigChannel(&TIM3_Handler,&TIM3_CH3Handler,TIM_CHANNEL_3);//配置TIM3通道4
    HAL_TIM_PWM_Start(&TIM3_Handler,TIM_CHANNEL_3);//开启PWM通道4
	
		HAL_TIM_PWM_ConfigChannel(&TIM3_Handler,&TIM3_CH4Handler,TIM_CHANNEL_4);//配置TIM3通道3
    HAL_TIM_PWM_Start(&TIM3_Handler,TIM_CHANNEL_4);//开启PWM通道4
	
}

void TIM4_PWM_Init(u16 arr,u16 psc)
{ 
    TIM4_Handler.Instance=TIM4;            //定时器3
    TIM4_Handler.Init.Prescaler=psc;       //定时器分频
    TIM4_Handler.Init.CounterMode=TIM_COUNTERMODE_UP;//向上计数模式
    TIM4_Handler.Init.Period=arr;          //自动重装载值
    TIM4_Handler.Init.ClockDivision=TIM_CLOCKDIVISION_DIV1;
	

    HAL_TIM_PWM_Init(&TIM4_Handler);       //初始化PWM
    
	//对应 User_PWM_SetPulse
    TIM4_CH1Handler.OCMode=TIM_OCMODE_PWM1; //模式选择PWM1
    TIM4_CH1Handler.Pulse=arr/2;            //设置比较值,此值用来确定占空比，//默认比较值为自动重装载值的一半,即占空比为50%
    TIM4_CH1Handler.OCPolarity=TIM_OCPOLARITY_HIGH; //输出比较极性为低 

		TIM4_CH2Handler.OCMode=TIM_OCMODE_PWM1; //模式选择PWM1
    TIM4_CH2Handler.Pulse=arr/2;            //
    TIM4_CH2Handler.OCPolarity=TIM_OCPOLARITY_HIGH; //
	
		TIM4_CH3Handler.OCMode=TIM_OCMODE_PWM1; //模式选择PWM1
    TIM4_CH3Handler.Pulse=arr/2;            //设置比较值,此值用来确定占空比，//默认比较值为自动重装载值的一半,即占空比为50%
    TIM4_CH3Handler.OCPolarity=TIM_OCPOLARITY_HIGH; //输出比较极性为低 

		TIM4_CH4Handler.OCMode=TIM_OCMODE_PWM1; //模式选择PWM1
    TIM4_CH4Handler.Pulse=arr/2;            //
    TIM4_CH4Handler.OCPolarity=TIM_OCPOLARITY_HIGH; //
	//
    HAL_TIM_PWM_ConfigChannel(&TIM4_Handler,&TIM4_CH1Handler,TIM_CHANNEL_1);//配置TIM1通道1
    HAL_TIM_PWM_Start(&TIM4_Handler,TIM_CHANNEL_1);//开启PWM通道1
		HAL_TIM_PWM_ConfigChannel(&TIM4_Handler,&TIM4_CH2Handler,TIM_CHANNEL_2);//配置TIM1通道2
    HAL_TIM_PWM_Start(&TIM4_Handler,TIM_CHANNEL_2);//开启PWM通道2
		HAL_TIM_PWM_ConfigChannel(&TIM4_Handler,&TIM4_CH3Handler,TIM_CHANNEL_3);//配置TIM1通道1
    HAL_TIM_PWM_Start(&TIM4_Handler,TIM_CHANNEL_3);//开启PWM通道1
		HAL_TIM_PWM_ConfigChannel(&TIM4_Handler,&TIM4_CH4Handler,TIM_CHANNEL_4);//配置TIM1通道2
    HAL_TIM_PWM_Start(&TIM4_Handler,TIM_CHANNEL_4);//开启PWM通道2
}

void TIM12_PWM_Init(u16 arr,u16 psc)
{ 
    TIM12_Handler.Instance=TIM12;            //定时器3
    TIM12_Handler.Init.Prescaler=psc;       //定时器分频
    TIM12_Handler.Init.CounterMode=TIM_COUNTERMODE_UP;//向上计数模式
    TIM12_Handler.Init.Period=arr;          //自动重装载值
    TIM12_Handler.Init.ClockDivision=TIM_CLOCKDIVISION_DIV1;
	

    HAL_TIM_PWM_Init(&TIM12_Handler);       //初始化PWM
    
	//对应 User_PWM_SetPulse
    TIM12_CH1Handler.OCMode=TIM_OCMODE_PWM1; //模式选择PWM1
    TIM12_CH1Handler.Pulse=arr/2;            //设置比较值,此值用来确定占空比，//默认比较值为自动重装载值的一半,即占空比为50%
    TIM12_CH1Handler.OCPolarity=TIM_OCPOLARITY_HIGH; //输出比较极性为低 

		TIM12_CH2Handler.OCMode=TIM_OCMODE_PWM1; //模式选择PWM1
    TIM12_CH2Handler.Pulse=arr/2;            //设置比较值,此值用来确定占空比，//默认比较值为自动重装载值的一半,即占空比为50%
    TIM12_CH2Handler.OCPolarity=TIM_OCPOLARITY_HIGH; //输出比较极性为低 
	
	  TIM12_CH3Handler.OCMode=TIM_OCMODE_PWM1; //模式选择PWM1
    TIM12_CH3Handler.Pulse=arr/2;            //设置比较值,此值用来确定占空比，//默认比较值为自动重装载值的一半,即占空比为50%
    TIM12_CH3Handler.OCPolarity=TIM_OCPOLARITY_HIGH; //输出比较极性为低 

		TIM12_CH4Handler.OCMode=TIM_OCMODE_PWM1; //模式选择PWM1
    TIM12_CH4Handler.Pulse=arr/2;            //设置比较值,此值用来确定占空比，//默认比较值为自动重装载值的一半,即占空比为50%
    TIM12_CH4Handler.OCPolarity=TIM_OCPOLARITY_HIGH; //输出比较极性为低 
	
    HAL_TIM_PWM_ConfigChannel(&TIM12_Handler,&TIM12_CH1Handler,TIM_CHANNEL_1);//配置TIM1通道1
    HAL_TIM_PWM_Start(&TIM12_Handler,TIM_CHANNEL_1);//开启PWM通道1
		HAL_TIM_PWM_ConfigChannel(&TIM12_Handler,&TIM12_CH2Handler,TIM_CHANNEL_2);//配置TIM1通道2
    HAL_TIM_PWM_Start(&TIM12_Handler,TIM_CHANNEL_2);//开启PWM通道3
		HAL_TIM_PWM_ConfigChannel(&TIM12_Handler,&TIM12_CH3Handler,TIM_CHANNEL_3);//配置TIM1通道1
    HAL_TIM_PWM_Start(&TIM12_Handler,TIM_CHANNEL_3);//开启PWM通道1
		HAL_TIM_PWM_ConfigChannel(&TIM12_Handler,&TIM12_CH4Handler,TIM_CHANNEL_4);//配置TIM1通道2
    HAL_TIM_PWM_Start(&TIM12_Handler,TIM_CHANNEL_4);//开启PWM通道3
}
